# zaocfg

./: .gitmodules  README.md  meson.build
src/: main.cpp
